<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="147dp"
                android:layout_height="111dp"
                android:text="VIT"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/editText8"
                android:layout_width="200dp"
                android:layout_height="111dp"
                android:background="#73FFFFFF"
                android:ems="10"
                android:hint="N2"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText14"
                android:layout_width="200dp"
                android:layout_height="111dp"
                android:background="#73FFFFFF"
                android:ems="10"
                android:hint="N1"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/editText15"
                android:layout_width="wrap_content"
                android:layout_height="119dp"
                android:background="#73FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/result"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addition"
                android:text="@string/addition" />

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="subtraction"
                android:text="subtraction" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="division"
                android:text="division" />

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="multiplication"
                android:text="@string/multiplication" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="modulus"
                android:text="modulus" />


        </TableRow>
    </TableLayout>
</LinearLayout>
